--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     <div id="dashboard">
         <div class="dashboard-header">
-            <div class="dashboard-title">CYBERMATRIX HACKING PLATFORM v2.1</div>
+            <div class="dashboard-title">ХАКИР В МИНКРИФТЕ v2.1</div>
             <div class="user-info">
                 <div class="user-status"></div>
                 <span>ADMIN [ROOT ACCESS]</span>
@@ -48,7 +48,7 @@
             </div>
             
             <div class="world-map">
-                <div class="map-header">GLOBAL ATTACK MAP</div>
+                <div class="map-header">GLOBAL ХАКИР ATTACK MAP</div>
                 <div class="map-container">
                     <div class="map-overlay"></div>
                     <div id="map-points"></div>
